@@ -1,5 +1,5 @@
 === Opus Primus changelog.txt ===
-Last revised June 5, 2014
+Last revised June 8, 2014
 Please note, the Opus Primus copyright can be found at the end of this file.
 
 == Version 1.2.5 ==
@@ -7,6 +7,7 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 
 = Code =
 * Added `antispambot` email protection
+* Added sanity checks to ensure widgets are active before rendering sidebars
 * Set Customization path and URL CONSTANTS
 * Enqueue custom stylesheets in a more upgrade safe location `/wp-content/opus-primus-customs/`
 
